--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
     "sass": "^1.93.2",
     "uuid": "^13.0.0"
